fixed alignment to pages

--- a/src/_mixins.scss
+++ b/src/_mixins.scss
@@ -37,6 +37,7 @@
     margin-bottom: 50px;
     box-shadow: $box-shadow;
     background-color: rgba(255, 255, 255, 0.2);
+    text-align: center
 }
 
 @mixin select {
