--- a/src/_variables.scss
+++ b/src/_variables.scss
@@ -8,6 +8,6 @@ $box-shadow: 0 8px 6px -6px black;
 $strong-shadow: 20px 20px 20px 20px rgba(0, 0, 0, 0.5);
 $super-contrast: rgb(180, 213, 14);
 $font-size: 16px;
-
+$text-shadow: 1px 1px 1px black;
 
 
