--- a/src/components/Activity/Activity.scss
+++ b/src/components/Activity/Activity.scss
@@ -20,6 +20,7 @@
 
     h2 {
         color: $almost-white-color;
+        text-shadow: $text-shadow;
     }
 
     box-shadow: 10px 10px 10px -6px black;
